webpage/frontend/hanna-webpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.group: hanna-webpage
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: hanna-webpage
  name: hanna-webpage
spec:
  ports:
    - name: "10031"
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: hanna-webpage
status:
  loadBalancer: {}
